<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_other_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_login"
        android:textColor="@color/gray99"
        android:textSize="@dimen/textSize12" />

    <LinearLayout
        android:id="@+id/ll_login_way"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_login_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size30"
            android:drawableTop="@mipmap/icon_circle_wechat"
            android:gravity="center"
            android:padding="@dimen/size8"
            android:text="@string/login_wechat"
            android:textColor="@color/gray99"
            android:textSize="@dimen/textSize10" />


        <TextView
            android:id="@+id/tv_login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size30"
            android:drawableTop="@mipmap/icon_circle_qq"
            android:gravity="center"
            android:padding="@dimen/size8"
            android:text="@string/login_qq"
            android:textColor="@color/gray99"
            android:textSize="@dimen/textSize10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size30"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="登录代表您已同意"
            android:textColor="@color/gray99"
            android:textSize="@dimen/textSize12" />

        <TextView
            android:id="@+id/tv_login_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="小虎Hoo用户协议和隐私政策"
            android:textColor="@color/color_ffcc03"
            android:textSize="@dimen/textSize12" />
    </LinearLayout>
</LinearLayout>