<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size170"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@mipmap/jiangbei"
        android:layout_marginStart="@dimen/size10"
        android:layout_marginEnd="@dimen/size15"
        android:layout_marginTop="@dimen/size20" />

    <TextView
        android:id="@+id/tvDurationTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ivBg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size24"
        android:textSize="@dimen/textSize12"
        android:text="@string/game_cloud_"
        android:textColor="@color/gray33" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toTopOf="@id/tvDurationTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size24"
        android:textSize="@dimen/textSize36"
        android:textColor="@color/gray33"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvAddDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/solid_rectangle_16_f3ba03"
        app:layout_constraintTop_toBottomOf="@id/tvDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/size10"
        android:text="@string/game_cloud_duration"
        android:gravity="center" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_cloud_details"
        app:layout_constraintTop_toBottomOf="@id/ivBg"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/textSize15"
        android:textColor="@color/gray33"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/size15"

        android:layout_marginTop="@dimen/size10" />
    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size1"
        android:background="@color/color_f2f2f2"
        app:layout_constraintTop_toBottomOf="@id/tvDetails"
        android:layout_marginTop="@dimen/size15" />

</androidx.constraintlayout.widget.ConstraintLayout>
